[package]
name = "sheets_database_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true }

# TODO remove extra traits
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro", "extra-traits"] }